--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,9 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of stikpetR is to ...
+The goal of stikpetR is to provide functions for statistical analysis of surveys. The functions are documented with the formulas and references used. 
+
+The functions are NOT optimized but instead relatively easy to follow. If you would look at the source code it is most often a combination of if statements and for loops.
 
 ## Installation
 
